youfull/objects/My_Business__c.object
<CustomObject>
    <fields>
        <fullName>ACCT_NR__c</fullName>
        <label>Acct. No.</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVG_DISCNT_PCT__c</fullName>
        <label>Average Discount Rate [%]</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVG_GENRTN_1_ACT_PCT__c</fullName>
        <label>Average Activity Rate [%]</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVG_GENRTN_1_DISTR_SLS_PCT__c</fullName>
        <label>G1 Average Sales Distribution [%]</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVG_GENRTN_1_QPA_CNT__c</fullName>
        <label>Average Qualified Personal Appointment R</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVG_GENRTN_1_RMVL_PCT__c</fullName>
        <label>Average Removal Rate [%]</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVG_GENRTN_1_UNIT_COMM_PCT__c</fullName>
        <label>G1 Average Unit Commission Rates [%]</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVG_GENRTN_2_DISTR_SLS_PCT__c</fullName>
        <label>G2 Average Sales Distribution [%]</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVG_GENRTN_2_UNIT_COMM_PCT__c</fullName>
        <label>G2 Average Unit Commission Rates [%]</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVG_GENRTN_3_DISTR_SLS_PCT__c</fullName>
        <description>Average of (award sales within 3rd generation / award sales within 3 generations) over last N campaigns</description>
        <label>G3 Average Sales Distribution [%]</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVG_GENRTN_3_UNIT_COMM_PCT__c</fullName>
        <label>G3 Average Unit Commission Rates [%]</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVG_ORD_SIZE_AMT__c</fullName>
        <label>Average Order Size</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVON_LOA_1_6_IND__c</fullName>
        <label>Avon LOA 1-6 Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Avon_LOA_Num__c</fullName>
        <formula>LOA_NR__c</formula>
        <label>LOA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BAD_DEBT_AMT__c</fullName>
        <label>Bad Debt</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BAL_DUE_AMT__c</fullName>
        <label>Next Due Amount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BONUS_ERNGS_AMT__c</fullName>
        <label>Bonus Earning</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOOK1_PRSNL_SLS_AMT__c</fullName>
        <label>B1 Personal Sales</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOOK2_PRSNL_SLS_AMT__c</fullName>
        <label>B1 Personal Sales</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRCHR_CNT__c</fullName>
        <label>Brochure Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNCH_NM2__c</fullName>
        <description>Used in report, for group by and column in report</description>
        <formula>BRNCH_NM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Branch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNCH_NM__c</fullName>
        <label>Branch</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNCH_SCTN_CD__c</fullName>
        <label>Branch Section</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTD_AWRD_SLS_AMT__c</fullName>
        <label>CTD QV Personal Sales</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CUST_CNT__c</fullName>
        <label>Customers Served</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DWNLN_ONLY_IND__c</fullName>
        <description>new CDW (Y= Rep is only downline). Used to control the &apos;Name&apos; link to show the coaching record or perform the impersonation</description>
        <inlineHelpText>Y= Rep is only downline. Used to control the &apos;Name&apos; link to show the coaching record or perform the impersonation</inlineHelpText>
        <label>Downline Only Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERNGS_PD_AMT__c</fullName>
        <label>Paid Earnings</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXEC_ERNGS_AMT__c</fullName>
        <label>Executive Earning</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXEC_RSNG_STR_IND__c</fullName>
        <label>Executive Rising Star Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAP_AWD_SLS_AMT__c</fullName>
        <label>Super Hits Amount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FAP_CNT__c</fullName>
        <label>Personal Super Hits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLD_SLS_CMPGN_NR__c</fullName>
        <label>Campaign Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FRST_ORDER_DUE_DT__c</fullName>
        <label>First Order Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FRST_ORDR_AMT__c</fullName>
        <label>First Order Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FRST_ORDR_DT__c</fullName>
        <label>First Order Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FRST_ORDR_PD_DT__c</fullName>
        <label>First Order Date Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FRST_ORD_REQ_DT__c</fullName>
        <label>First Order Required Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GENRTN_1_APPT_CNT__c</fullName>
        <label>Personal Appts.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_1_QPA_CNT__c</fullName>
        <label>Qualified Personal Appointments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_1_QPA_CONVRSN_PCT__c</fullName>
        <formula>100 * (GENRTN_1_QPA_CNT__c / GENRTN_1_APPT_CNT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qualified Personal Appointment rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INACTV_CMPGN_CNT__c</fullName>
        <label># of Campaigns Inactive</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INVCD_SLS_AMT__c</fullName>
        <formula>INVC_AWRD_SLS_AMT__c  +  INVC_RTURN_AWRD_SLS_AMT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Invoiced Award Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INVC_AWRD_SLS_AMT__c</fullName>
        <label>Award Sales Invoiced</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INVC_RTURN_AWRD_SLS_AMT__c</fullName>
        <label>Return Award Sales Invoiced</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IS_CURR_CMPGN__c</fullName>
        <formula>IF (MRKT_KEY__r.CMPGN_NR__c = OPERTNL_CMPGN_NR__c, &apos;True&apos;, &apos;False&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Current Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IS_NEXT_1_CMPGN__c</fullName>
        <formula>IF (MRKT_KEY__r.NEXT_1_CMPGN_NR__c = OPERTNL_CMPGN_NR__c, &apos;True&apos;, &apos;False&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Next Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IS_PREV_1_CMPGN__c</fullName>
        <formula>IF (MRKT_KEY__r.PREV_1_CMPGN_NR__c = OPERTNL_CMPGN_NR__c, &apos;True&apos;, &apos;False&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Prev Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IS_PREV_OR_CURR_OR_NEXT_CMPGN__c</fullName>
        <formula>IF ( OR (
        (MRKT_KEY__r.PREV_1_CMPGN_NR__c = OPERTNL_CMPGN_NR__c), 
		(MRKT_KEY__r.CMPGN_NR__c = OPERTNL_CMPGN_NR__c), 
		(MRKT_KEY__r.NEXT_1_CMPGN_NR__c = OPERTNL_CMPGN_NR__c) ), 
        &apos;True&apos;, &apos;False&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Previous or Current or Next Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IS_QUALFD_IND__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Qualified Candidate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IS_RECENT_RMOVL__c</fullName>
        <formula>IF ( AND (REP_OMS_STUS_CD__c = &apos;0&apos;, OR (REP_RMOVL_CMPGN_NR__c = MRKT_KEY__r.CMPGN_NR__c, REP_RMOVL_CMPGN_NR__c = MRKT_KEY__r.PREV_1_CMPGN_NR__c ) ), &apos;True&apos;, &apos;False&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Recent Removal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAST_CMPGN_TAR_IND__c</fullName>
        <label>Title At Risk Last Campaign</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCL_TOP_SLR_LVL_KEY__c</fullName>
        <label>Seller Title Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCL_TOP_SLR_LVL_LANG_DESC_TXT__c</fullName>
        <label>Seller Title</label>
        <picklist>
            <picklistValues>
                <fullName>0-PCSilver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0-PCSilverM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0-PCSilverNQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0-PCSilverO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-Models</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-ModelsM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-ModelsNQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-ModelsO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-HighFlyers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-HighFlyers1M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-HighFlyers1NQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-HighFlyers1O</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-HighFlyers2M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-HighFlyers2NQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-HighFlyers2O</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4-Movers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4-Movers1NQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4-Movers1O</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-Movers2NQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-Movers2O</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-Movers3NQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-Movers3O</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7-CustomerFD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7-CustomerFDNQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7-CustomerFDO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8-New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NON TOP SELLER</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LDRSHP_CTT_IND__c</fullName>
        <label>Leader Title Close to Promoted</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDRSHP_LOA_NR__c</fullName>
        <label>LLOA</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDRSHP_RPT_SLS_ZONE_CD__c</fullName>
        <label>Reporting Zone</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDRSHP_TAR_IND__c</fullName>
        <label>Leader Title at Risk</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDRSHP_TITL_DMTD_IND__c</fullName>
        <label>Leader Title Demoted</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDRSHP_TITL_LVL_CD__c</fullName>
        <label>Badge Title Code</label>
        <picklist>
            <picklistValues>
                <fullName>CAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEL2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEL4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEL1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEL3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEL5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LDRSHP_TITL_LVL_DESC__c</fullName>
        <label>Badge Title</label>
        <picklist>
            <picklistValues>
                <fullName>Candidate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advance Unit Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Executive Unit Leader 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unit Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Unit Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Executive Unit Leader 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Executive Unit Leader 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Executive Unit Leader 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Executive Unit Leader 4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LDRSHP_TITL_LVL_NAME__c</fullName>
        <label>Leader Title</label>
        <picklist>
            <picklistValues>
                <fullName>Non Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Candidate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advance Unit Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Executive Unit Leader 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Executive Unit Leader 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Executive Unit Leader 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unit Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Unit Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Executive Unit Leader 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Executive Unit Leader 2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LDRSHP_TITL_LVL_NR_NUMBER__c</fullName>
        <description>LDRSHP_TITL_LVL_NR__c converted into a number</description>
        <formula>VALUE( LDRSHP_TITL_LVL_NR__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>LDRSHP_TITL_LVL_NR__c converted into a number</inlineHelpText>
        <label>Level Title Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDRSHP_TITL_LVL_NR__c</fullName>
        <label>Level Title Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDRSHP_TITL_PROMTD_IND__c</fullName>
        <label>Leader Title Promoted</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDR_ERNGS_AMT__c</fullName>
        <label>Leadership Earnings</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDR_TITL__c</fullName>
        <formula>IF (MRKT_KEY__r.CMPGN_END_DT__c &gt;  TODAY() ,  TEXT(LDRSHP_TITL_LVL_DESC__c) , TEXT( PD_TITL_LVL_NAME__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leader Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOA_NR__c</fullName>
        <label>LOA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LST_ACTV_CMPGN__c</fullName>
        <label>Last Active Campaign</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LST_ORD_CMPGN_NR__c</fullName>
        <label>Last Order Campaign</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MLPLN_CD__c</fullName>
        <label>Mail Plan</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MLPLN_CLS_IND__c</fullName>
        <label>Mail Plan Close Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MRKT_ACCT_KEY__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>My_Businesses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MRKT_CMPGN_SLS_ZONE_CD__c</fullName>
        <description>For partitioning</description>
        <label>Market / Campaign / Zone</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MRKT_ID__c</fullName>
        <label>MRKT_ID</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MRKT_KEY__c</fullName>
        <label>Campaign_Key</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipName>Personal_Performance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MULT_ORD_CNT__c</fullName>
        <label>Multiple Order Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NET_SLS_AMT__c</fullName>
        <label>Net Sales</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEW_TITL_ACHVER_IND__c</fullName>
        <label>New (First Time) Title Achiever</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NXT_DUE_DT__c</fullName>
        <label>Next Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NXT_LVL_MIN_PRSNL_SLS_REQD_AMT__c</fullName>
        <formula>PRSNL_SLS_AMT__c - NXT_TITL_LVL_KEY__r.MIN_GRP_SLS_REQD_AMT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Title in QV Personal Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NXT_TITL_LVL_KEY__c</fullName>
        <label>Next Title</label>
        <referenceTo>Leader_Title__c</referenceTo>
        <relationshipName>Personal_Performance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OPERTNL_CMPGN_NR__c</fullName>
        <label>Campaign</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORD_ABV_MOE_IND__c</fullName>
        <label>Order Above MVE (To Earn)</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORD_HOLD_AMT__c</fullName>
        <label>Hold Order Amount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ORD_UND_MOE_IND__c</fullName>
        <label>Order Under MVE (To Earn)</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORD_UND_MOV_IND__c</fullName>
        <label>Order Under MOV (For Discount)</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAST_DUE_AMT__c</fullName>
        <label>Amount Overdue</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC1_INVC_AWRD_SLS_AMT__c</fullName>
        <label>Camp. -1 Personal Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC2_INVC_AWRD_SLS_AMT__c</fullName>
        <label>Camp. -2 Personal Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC3_INVC_AWRD_SLS_AMT__c</fullName>
        <label>Camp. -3 Personal Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PD_TITL_LVL_CD__c</fullName>
        <label>Paid Title Code</label>
        <picklist>
            <picklistValues>
                <fullName>CAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEL2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEL4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEL1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEL3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEL5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PD_TITL_LVL_NAME__c</fullName>
        <label>Paid Title</label>
        <picklist>
            <picklistValues>
                <fullName>Non Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advance Unit Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unit Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Candidate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Unit Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Executive Unit Leader 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Executive Unit Leader 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Executive Unit Leader 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Executive Unit Leader 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Executive Unit Leader 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Leader Candidate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PD_TITL_LVL_NR_NUMBER__c</fullName>
        <description>PD_TITL_LVL_NR__c converted into a number</description>
        <formula>VALUE(   PD_TITL_LVL_NR__c    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>PD_TITL_LVL_NR__c converted into a number</inlineHelpText>
        <label>PD TITL LVL NR NUMBER</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PD_TITL_LVL_NR__c</fullName>
        <label>Paid Title (Closed Campaign)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PREV_CYCL_LCL_TOP_SLR_LVL_KEY__c</fullName>
        <label>Prior Cycle Top Seller Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRFRMNC_LDRSHP_TITL_LANG_CD__c</fullName>
        <label>Performing Title</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRSNL_DSCNT_AMT__c</fullName>
        <label>Personal Discount Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRSNL_MRKT_TAG_1_CNT__c</fullName>
        <label>Market tags 1</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRSNL_MRKT_TAG_2_AMT__c</fullName>
        <label>Market tags 2</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRSNL_MRKT_TAG_3_TXT__c</fullName>
        <label>Market tags 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRSNL_SLS_AMT__c</fullName>
        <formula>( INVC_AWRD_SLS_AMT__c  +  INVC_RTURN_AWRD_SLS_AMT__c  +  SUBMTD_AWRD_SLS_AMT__c +   SUBMTD_RTURN_AWRD_SLS_AMT__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Personal Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Personal_Performance_Key__c</fullName>
        <description>MRKT_CMPGN_ACCT_KEY</description>
        <externalId>true</externalId>
        <inlineHelpText>MRKT_CMPGN_ACCT_KEY</inlineHelpText>
        <label>Personal Performance key</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QPA_Achievement__c</fullName>
        <formula>IF(REP_OMS_STUS_CD__c = &apos;-2&apos;, 

IF(Total_Award_Sales__c = 0, 
$Label.ZM_QPA_Not_Started, 
IF(AND(FRST_ORDR_AMT__c &gt; 0, FRST_ORDER_DUE_DT__c &gt; TODAY() ), 
$Label.ZM_QPA_In_Progress, 
$Label.ZM_QPA_Data_Issue) 
), 

IF(REP_OMS_STUS_CD__c = &apos;1&apos;, 
IF (FRST_ORDR_AMT__c &gt;= MRKT_KEY__r.SPONSOR_QLFYING_ORD_AMT__c, 
IF(AND(FRST_ORDR_PD_DT__c != null, FRST_ORDR_PD_DT__c &lt;= FRST_ORDER_DUE_DT__c), 
$Label.ZM_QPA_Yes, 
IF(AND(FRST_ORDR_PD_DT__c != null, FRST_ORDR_PD_DT__c &gt; FRST_ORDER_DUE_DT__c), 
$Label.ZM_QPA_No, 
IF(AND(FRST_ORDR_PD_DT__c = null, FRST_ORDER_DUE_DT__c &gt;= TODAY() ), 
$Label.ZM_QPA_In_Progress, 
IF(AND(FRST_ORDR_PD_DT__c = null, FRST_ORDER_DUE_DT__c &lt; TODAY() ), 
$Label.ZM_QPA_No, 
$Label.ZM_QPA_Data_Issue) 
) 
) 
), 
$Label.ZM_QPA_Data_Issue) , 
IF(FRST_ORDR_AMT__c &lt; MRKT_KEY__r.SPONSOR_QLFYING_ORD_AMT__c , 
IF(FRST_ORDR_PD_DT__c != null, 
$Label.ZM_QPA_No, 
IF(AND(FRST_ORDR_PD_DT__c = null, TODAY() &gt; FRST_ORDER_DUE_DT__c), 
$Label.ZM_QPA_No, 
$Label.ZM_QPA_Data_Issue) 
), 
IF(REP_OMS_STUS_CD__c = &apos;0&apos;, 
$Label.ZM_QPA_Removed_Rep, 
$Label.ZM_QPA_Not_Valid) 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QPA Achievement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPA_CONVRSN_PCT__c</fullName>
        <formula>100* GENRTN_1_QPA_CNT__c/ SPPY_GENRTN_1_APPT_CNT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qualified Appointment rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>